fix: hide Recent Publications sidebar when empty, add Media to visibility check

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -145,7 +145,7 @@
             </section>
           </ng-container>
         </div>
-        <div class="col-lg-4" style="text-align: right;">
+        <div class="col-lg-4" style="text-align: right;" *ngIf="showSidebar">
           <div class="position-sticky" style="top: 2rem">
             <div class="sidebar-modern border border-primary">
               <h4 class="text-primary">{{ 'RECENT_POSTS' | translate }}</h4>
