--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -59,6 +59,14 @@
         {{ 'SITE_SETTINGS' | translate }}
       </a>
     </li>
+    <!-- Site Labels Tab -->
+    <li class="nav-item" role="presentation" *ngIf="user?.roles?.includes('root_super_admin')">
+      <a class="nav-link" routerLink="labels" routerLinkActive="active" id="site-labels-tab" role="tab"
+        aria-controls="site-labels-tab-pane">
+        <i class="bi bi-input-cursor-text ms-2"></i>
+        نصوص الموقع
+      </a>
+    </li>
     <!-- Site Analytics Tab -->
     <li class="nav-item" role="presentation" *ngIf="user?.roles?.includes('root_super_admin')">
       <a class="nav-link" routerLink="site-analytics" routerLinkActive="active" id="site-analytics-tab" role="tab"
